compiler/testData/diagnostics/tests/regressions/Jet11.jet
// JET-11 Redeclaration & Forward reference for classes cause an exception
open class <!REDECLARATION!>NoC<!>
class NoC1 : NoC()
open class <!REDECLARATION!>NoC<!>
